# ARTI4

./: .gitignore  README.md
src/arti_control/: CMakeLists.txt  package.xml
src/arti_control/config/: ps3.config  xbox.config
src/arti_control/include/arti_control/: arti_control.h
src/arti_control/launch/: go_straight.launch  joy_teleop.launch
src/arti_control/scripts/: joy_test.py
src/arti_control/src/: arti_control.cpp
src/arti_gazebo/: CMakeLists.txt  package.xml
src/arti_gazebo/launch/: spawn_arti.launch
src/arti_hardware/: CMakeLists.txt  README.md  package.xml
src/arti_hardware/config/: control.yaml  rosconfig.yaml
src/arti_hardware/firmware/: CMakeLists.txt  blink_test.cpp  one_motor_test.cpp  protocol.cpp
src/arti_hardware/firmware/ArtiEncoder/: ArtiEncoder.ino
src/arti_hardware/firmware/Base/: Base.ino  stino.settings
src/arti_hardware/firmware/Base2/: Base2.ino
src/arti_hardware/firmware/Base3/: Base3.ino
src/arti_hardware/firmware/Base4/: Base4.ino
src/arti_hardware/firmware/DS_test/: DS_test.ino
src/arti_hardware/firmware/MotorDrive/: MotorDrive.ino
src/arti_hardware/firmware/TestCode/MultiTempTest/: MultiTempTest.ino
src/arti_hardware/firmware/TestCode/UltrasoundTest/: UltrasoundTest.ino
src/arti_hardware/firmware/Ultrasound/: multi_analog.ino  multi_pwm.ino
src/arti_hardware/firmware/Ultrasound/multi_analog/: multi_analog.ino
src/arti_hardware/firmware/Ultrasound/multi_analog2/: multi_analog2.ino
src/arti_hardware/firmware/UltrasoundSourceCode/: Ultrasound.ino  single_pwm.ino
src/arti_hardware/firmware/libraries/OneWireTemp/: MultiTemp.cpp  MultiTemp.h  OneWireTemp.cpp  OneWireTemp.h  keywords.txt
src/arti_hardware/firmware/libraries/Rotary/: Rotary.cpp  Rotary.h
src/arti_hardware/firmware/libraries/Ultrasound/: Ultrasound.cpp  Ultrasound.h
src/arti_hardware/include/arti_hardware/: arti_hardware.h
src/arti_hardware/launch/: arti_base.launch  hector_mapping.launch
src/arti_hardware/src/: arti_arduino.cpp  arti_hardware.cpp
src/arti_msgs/: CMakeLists.txt  README.md  package.xml
src/arti_msgs/msg/: DiffOdom.msg  Temperature.msg  Ultrasound.msg
src/arti_navigation/: CMakeLists.txt  package.xml
src/arti_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_2d.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_2d.yaml  planner.yaml
src/arti_navigation/include/: arti_odom_helper.h
src/arti_navigation/launch/: move_base.launch  multi_goal_publisher.launch  obstacles_detection.launch  stair_climb.launch
src/arti_navigation/rviz/: move_base.rviz
src/arti_navigation/src/: arti_goal_publisher.cpp  arti_odom_helper.cpp  costmap_cleanner.cpp  multi_goal_publisher.cpp  stair_climb.cpp
src/dad_local_planner/: CMakeLists.txt  package.xml
src/dad_local_planner/MP/: motion_primitives.txt  motion_primitives_4.txt  motion_primitives_long.txt  motion_primitives_long2.txt
src/dad_local_planner/config/: DADPlannerROS.cfg
src/dad_local_planner/include/dad_local_planner/: AStarSearch.h  Common.h  DADPlannerConfig.h  DynamicObstacleCostEvaluator.h  DynamicsConstraints.h  MotionPrimitive.h  MotionPrimitiveInfo.h  MotionPrimitiveManager.h  Node.h  ReferenceTrajectory.h  SpatialHash.h  StaticObstacleCostEvaluator.h  Trajectory.h  TrajectorySpace.h  TubeCostEvaluator.h  WaypointPath.h  dad_planner.h  dad_planner_ros.h
src/dad_local_planner/launch/: dad_others.launch  dad_static.launch  debug.launch  debug.launch.orig  husky_empty_world.launch  others.launch  planner.launch  willow_garage.launch
src/dad_local_planner/rviz/: viz1.rviz
src/dad_local_planner/src/: dad_planner.cpp  dad_planner_node.cpp  dad_planner_ros.cpp
src/dad_local_planner/src/planner/: AStarSearch.cpp  DijkstraSearch.cpp.BACKUP.6990.cpp  DijkstraSearch.cpp.BASE.6990.cpp  DynamicObstacleCostEvaluator.cpp  DynamicsConstraints.cpp  MotionPrimitive.cpp  MotionPrimitiveManager.cpp  Node.cpp  SpatialHash.cpp  StaticObstacleCostEvaluator.cpp  TrajectorySpace.cpp  TubeCostEvaluator.cpp  WaypointPath.cpp  test_ReferenceTrajectory.cpp  test_SpatialHash.cpp  test_WaypointPath.cpp
src/dad_local_planner/worlds/: demo_world  world1  world2  world3
src/global_planner_ros/: CMakeLists.txt  package.xml
src/global_planner_ros/cfg/: GlobalPlannerROS.cfg
src/global_planner_ros/config/: costmap_common.yaml  planner.yaml
src/global_planner_ros/include/global_planner_ros/: global_planner_ros.h
src/global_planner_ros/launch/: global_planner_node.launch  multi_robot.launch
src/global_planner_ros/src/: global_planner_node.cpp  global_planner_ros.cpp
src/interactive_path_publisher/: CMakeLists.txt  package.xml
src/interactive_path_publisher/include/interactive_path_publisher/: IPP.h
src/interactive_path_publisher/src/: IPP.cpp  IPPNode.cpp
src/pure_pursuit_controller/: CMakeLists.txt  debug.rviz  package.xml
src/pure_pursuit_controller/config/: pure_pursuit_controller.yaml
src/pure_pursuit_controller/include/pure_pursuit_controller/: pure_pursuit_controller.h
src/pure_pursuit_controller/launch/: pure_pursuit_controller.launch
src/pure_pursuit_controller/scripts/: path_publisher.py
src/pure_pursuit_controller/src/: pure_pursuit_controller.cpp  pure_pursuit_controller_node.cpp
src/sensor_data_recorder/: CMakeLists.txt  package.xml
src/sensor_data_recorder/include/sensor_data_recorder/: sensor_data_recorder.h
src/sensor_data_recorder/launch/: rosbag_record.launch  sensor_data_recorder.launch
src/sensor_data_recorder/scripts/: joy_recorder.py
src/sensor_data_recorder/src/: sensor_data_recorder.cpp  sensor_data_recorder_node.cpp
src/track_generator/: CMakeLists.txt  package.xml
src/track_generator/env-hooks/: arti_env_hook.sh
src/track_generator/model/track_thread/: model.config  model.sdf
src/track_generator/src/: dwg_test.py  joint_template.sdf  link_template.sdf  link_template_2.sdf  link_template_3.sdf  model.sdf  model_template.sdf  track_generator.py  track_generator_2.py  two_track.world
src/track_generator/world/: simple_car_assembly.world
(+74 files in other folders)
