<package>
    <name>arti_msgs</name>
    <version>0.0.1</version>
    <description>
      TODO
    </description>
    <author>Di Zeng</author>
    <author>di.zeng@transcendrobotics.com</author>
    <maintainer email="di.zeng@transcendrobotics.com">Di Zeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <!-- <build_depend>eigen3</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>serial</build_depend>
    <build_depend>message_generation</build_depend>
    <!-- <build_depend>libserial</build_depend> -->

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <!-- <run_depend>eigen3</run_depend> -->
    <run_depend>serial</run_depend>
    <run_depend>message_generation</run_depend>
    <!-- <run_depend>libserial</run_depend> -->
    

    <export>
    </export>

</package>


