<package>
    <name>arti_navigation</name>
    <version>0.0.1</version>
    <description>
      TODO
    </description>
    <author>Di Zeng</author>
    <author>di.zeng@transcendrobotics.com</author>
    <maintainer email="di.zeng@transcendrobotics.com">Di Zeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <!-- <build_depend>eigen</build_depend> -->
    <build_depend>roscpp</build_depend>
    <build_depend>arti_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <!-- <build_depend>rtabmap_ros</build_depend> -->

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>arti_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>tf</run_depend>
    <!-- <run_depend>rtabmap_ros</run_depend> -->
    <!-- <run_depend>eigen</run_depend> -->

    <export>
    </export>

</package>


