<package>
    <name>sensor_data_recorder</name>
    <version>1.12.4</version>
    <description>
       sensor_data_recorder
    </description>
    <author>Eitan DiZeng</author>
    <maintainer email="willzeng@umd.edu">DiZeng!!</maintainer>
    <license>BSD</license>
    <!-- <url>http://wiki.ros.org/machine_learning</url> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <!-- <build_depend>costmap_2d</build_depend> -->
    <!-- <build_depend>dynamic_reconfigure</build_depend> -->
    <build_depend>eigen</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <!-- <build_depend>ugv_msgs</build_depend> -->
    <build_depend>arti_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <!-- <build_depend>motion_primitive_generator</build_depend> -->
    <build_depend>diagnostic_msgs</build_depend>

    <!-- <run_depend>costmap_2d</run_depend> -->
    <!-- <run_depend>dynamic_reconfigure</run_depend> -->
    <run_depend>eigen</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <!-- <run_depend>ugv_msgs</run_depend> -->
    <run_depend>arti_msgs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    
    <!-- <run_depend>motion_primitive_generator</run_depend> -->
    <run_depend>diagnostic_msgs</run_depend>


</package>


