<package>
    <name>track_generator</name>
    <version>0.0.1</version>
    <description>
      TODO
    </description>
    <author>Di Zeng</author>
    <author>di.zeng@transcendrobotics.com</author>
    <maintainer email="di.zeng@transcendrobotics.com">Di Zeng</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>eigen</run_depend>

    <export>
        <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/model" gazebo_resource_path="${prefix}/model"/>                    
    </export>

</package>


